@@ -3,7 +3,6 @@ package uk.gov.hmcts.reform.prl.services;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections.CollectionUtils;
-import org.apache.commons.collections.ListUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
@@ -20,9 +19,11 @@ import uk.gov.hmcts.reform.prl.enums.manageorders.OtherOrganisationOptions;
 import uk.gov.hmcts.reform.prl.enums.manageorders.SelectTypeOfOrderEnum;
 import uk.gov.hmcts.reform.prl.enums.manageorders.ServeOtherPartiesOptions;
 import uk.gov.hmcts.reform.prl.models.Element;
+import uk.gov.hmcts.reform.prl.models.common.dynamic.DynamicMultiSelectList;
 import uk.gov.hmcts.reform.prl.models.common.dynamic.DynamicMultiselectListElement;
 import uk.gov.hmcts.reform.prl.models.complextypes.PartyDetails;
 import uk.gov.hmcts.reform.prl.models.documents.Document;
+import uk.gov.hmcts.reform.prl.models.dto.ccd.BulkPrintOrderDetail;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.ManageOrders;
 import uk.gov.hmcts.reform.prl.models.dto.notify.EmailTemplateVars;
@@ -31,17 +32,22 @@ import uk.gov.hmcts.reform.prl.models.dto.notify.serviceofapplication.Respondent
 import uk.gov.hmcts.reform.prl.models.email.EmailTemplateNames;
 import uk.gov.hmcts.reform.prl.utils.CaseUtils;
 
+import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
 import static org.apache.commons.lang3.ObjectUtils.isNotEmpty;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.DATE_TIME_PATTERN;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.TASK_LIST_VERSION_V2;
+import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
+import static uk.gov.hmcts.reform.prl.utils.ElementUtils.nullSafeCollection;
 
 @Service
 @Slf4j
@@ -108,7 +114,7 @@ public class ManageOrderEmailService {
             for (Map.Entry<String, String> appValues : applicantsMap.entrySet()) {
                 if (!StringUtils.isEmpty(appValues.getKey())) {
                     sendEmailToPartyOrPartySolicitor(isFinalOrder, appValues.getKey(),
-                                                     buildApplicantRespondentEmail(caseDetails, appValues.getValue()),
+                                                     buildApplicantRespondentEmail(caseData, appValues.getValue()),
                                                      caseData
                     );
                 }
@@ -117,22 +123,22 @@ public class ManageOrderEmailService {
             for (Map.Entry<String, String> appValues : respondentMap.entrySet()) {
                 if (!StringUtils.isEmpty(appValues.getKey())) {
                     sendEmailToPartyOrPartySolicitor(isFinalOrder, appValues.getKey(),
-                                                     buildApplicantRespondentEmail(caseDetails, appValues.getValue()),
+                                                     buildApplicantRespondentEmail(caseData, appValues.getValue()),
                                                      caseData
                     );
                 }
             }
         } else {
-            sendEmailForFlCaseType(caseDetails, caseData, isFinalOrder);
+            sendEmailForFlCaseType(caseData, isFinalOrder);
         }
     }
 
 
-    private void sendEmailForFlCaseType(CaseDetails caseDetails, CaseData caseData, SelectTypeOfOrderEnum isFinalOrder) {
+    private void sendEmailForFlCaseType(CaseData caseData, SelectTypeOfOrderEnum isFinalOrder) {
         if (!StringUtils.isEmpty(caseData.getApplicantsFL401().getSolicitorEmail())) {
             sendEmailToPartyOrPartySolicitor(isFinalOrder, caseData.getApplicantsFL401().getSolicitorEmail(),
                                              buildApplicantRespondentSolicitorEmail(
-                                                 caseDetails, caseData.getApplicantsFL401().getRepresentativeFirstName()
+                                                 caseData, caseData.getApplicantsFL401().getRepresentativeFirstName()
                                                      + " " + caseData.getApplicantsFL401().getRepresentativeLastName()),
                                              caseData
             );
@@ -140,7 +146,7 @@ public class ManageOrderEmailService {
         if (!StringUtils.isEmpty(caseData.getRespondentsFL401().getEmail())) {
             sendEmailToPartyOrPartySolicitor(isFinalOrder, caseData.getRespondentsFL401().getEmail(),
                                              buildApplicantRespondentEmail(
-                                                 caseDetails,
+                                                 caseData,
                                                  caseData.getRespondentsFL401().getFirstName()
                                                      + " " + caseData.getRespondentsFL401().getFirstName()
                                              ),
@@ -237,12 +243,10 @@ public class ManageOrderEmailService {
             ));
     }
 
-    private EmailTemplateVars buildApplicantRespondentEmail(CaseDetails caseDetails, String name) {
-        CaseData caseData = emailService.getCaseData(caseDetails);
-
+    private EmailTemplateVars buildApplicantRespondentEmail(CaseData caseData, String name) {
         return ManageOrderEmail.builder()
-            .caseReference(String.valueOf(caseDetails.getId()))
-            .caseName(emailService.getCaseData(caseDetails).getApplicantCaseName())
+            .caseReference(String.valueOf(caseData.getId()))
+            .caseName(caseData.getApplicantCaseName())
             .applicantName(name)
             .courtName(caseData.getCourtName())
             .dashboardLink(citizenDashboardUrl)
@@ -250,12 +254,10 @@ public class ManageOrderEmailService {
     }
 
 
-    private EmailTemplateVars buildApplicantRespondentSolicitorEmail(CaseDetails caseDetails, String name) {
-        CaseData caseData = emailService.getCaseData(caseDetails);
-
+    private EmailTemplateVars buildApplicantRespondentSolicitorEmail(CaseData caseData, String name) {
         return ManageOrderEmail.builder()
-            .caseReference(String.valueOf(caseDetails.getId()))
-            .caseName(emailService.getCaseData(caseDetails).getApplicantCaseName())
+            .caseReference(String.valueOf(caseData.getId()))
+            .caseName(caseData.getApplicantCaseName())
             .applicantName(name)
             .courtName(caseData.getCourtName())
             .dashboardLink(manageCaseUrl + "/" + caseData.getId() + "#Orders")
@@ -389,23 +391,28 @@ public class ManageOrderEmailService {
             .build();
     }
 
-    public void sendEmailWhenOrderIsServed(CaseDetails caseDetails, String authorisation) {
+    public void sendEmailWhenOrderIsServed(String authorisation,
+                                           CaseData caseData,
+                                           Map<String, Object> caseDataMap) {
         List<String> listOfOtherAndCafcassEmails = new ArrayList<>();
-        CaseData caseData = emailService.getCaseData(caseDetails);
         ManageOrders manageOrders = caseData.getManageOrders();
         String caseTypeofApplication = CaseUtils.getCaseTypeOfApplication(caseData);
         SelectTypeOfOrderEnum isFinalOrder = CaseUtils.getSelectTypeOfOrder(caseData);
+        List<Element<BulkPrintOrderDetail>> bulkPrintOrderDetails = new ArrayList<>();
+
         if (caseTypeofApplication.equalsIgnoreCase(PrlAppsConstants.C100_CASE_TYPE)) {
+            List<Document> orderDocuments = getServedOrderDocumentsAndAdditionalDocuments(caseData);
             if (YesOrNo.No.equals(manageOrders.getServeToRespondentOptions())) {
                 log.info("** CA case email notifications***");
-                sendEmailToPartyOrSolicitor(manageOrders.getRecipientsOptions().getValue(),
+                //applicants
+                sendEmailToApplicantOrSolicitor(manageOrders.getRecipientsOptions().getValue(),
                                             caseData.getApplicants(),
-                                            isFinalOrder, caseDetails, caseData, false, authorisation
-                );
-                sendEmailToPartyOrSolicitor(manageOrders.getRecipientsOptions().getValue(),
-                                            caseData.getRespondents(),
-                                            isFinalOrder, caseDetails, caseData, true, authorisation
-                );
+                                            isFinalOrder, caseData);
+                //respondents
+                sendEmailToSolicitorOrPostToRespondent(manageOrders.getRecipientsOptions().getValue(),
+                        caseData.getRespondents(), isFinalOrder, caseData,
+                        authorisation, orderDocuments, bulkPrintOrderDetails);
+                log.info("*** Bulk print details after respondents {}", bulkPrintOrderDetails);
             }
             if (manageOrders.getServeOtherPartiesCA() != null && manageOrders.getServeOtherPartiesCA()
                 .contains(OtherOrganisationOptions.anotherOrganisation)
@@ -413,22 +420,24 @@ public class ManageOrderEmailService {
                 manageOrders.getEmailInformationCA().stream().map(Element::getValue).forEach(value -> listOfOtherAndCafcassEmails
                     .add(value.getEmailAddress()));
             }
-            //send email notification to other people in the case
+            //PRL-4225 - send order & additional docs to other people via post only
             if (null != manageOrders.getOtherParties()) {
-                manageOrders.getOtherParties().getValue().stream().map(DynamicMultiselectListElement::getCode).forEach(
-                    id -> {
-                        String otherEmail = getOtherPeopleEmailAddress(id, caseData);
-                        if (null != otherEmail) {
-                            listOfOtherAndCafcassEmails.add(otherEmail);
-                        }
-                    });
+                log.info("Inside send order docs to other persons {}", manageOrders.getOtherParties());
+                serveOrderToOtherPersons(authorisation,
+                        manageOrders.getOtherParties(), caseData, orderDocuments, bulkPrintOrderDetails);
+                log.info("### Bulk print details after other persons {}", bulkPrintOrderDetails);
             }
             //Send email notification to Cafcass or Cafcass cymru based on selection
             if (getCafcassEmail(manageOrders) != null) {
                 listOfOtherAndCafcassEmails.add(getCafcassEmail(manageOrders));
             }
+
+            //PRL-4225 - set bulkIds in the orderCollection & update in caseDataMap
+            addBulkPrintIdsInOrderCollection(caseData, bulkPrintOrderDetails);
+            caseDataMap.put("orderCollection", caseData.getOrderCollection());
+
         } else if (caseTypeofApplication.equalsIgnoreCase(PrlAppsConstants.FL401_CASE_TYPE)) {
-            sendEmailForFlCaseType(caseDetails, caseData, isFinalOrder);
+            sendEmailForFlCaseType(caseData, isFinalOrder);
             if (manageOrders.getServeOtherPartiesDA() != null && manageOrders.getServeOtherPartiesDA()
                 .contains(ServeOtherPartiesOptions.other)
                 && DeliveryByEnum.email.equals(manageOrders.getDeliveryByOptionsDA())) {
@@ -446,6 +455,65 @@ public class ManageOrderEmailService {
                                                     LanguagePreference.english
                                                 )
         );
+
+    }
+
+    private void addBulkPrintIdsInOrderCollection(CaseData caseData,
+                                                  List<Element<BulkPrintOrderDetail>> bulkPrintOrderDetails) {
+        caseData.getManageOrders().getServeOrderDynamicList().getValue()
+                .forEach(element -> nullSafeCollection(caseData.getOrderCollection())
+                        .forEach(orderDetailsElement -> {
+                            if (orderDetailsElement.getId().toString().equals(element.getCode())) {
+                                List<Element<BulkPrintOrderDetail>> bulkPrints = CollectionUtils.isNotEmpty(orderDetailsElement.getValue()
+                                        .getBulkPrintOrderDetails()) ? orderDetailsElement.getValue().getBulkPrintOrderDetails() : new ArrayList<>();
+                                bulkPrints.addAll(bulkPrintOrderDetails);
+                                orderDetailsElement.getValue()
+                                        .setBulkPrintOrderDetails(bulkPrints);
+                            }
+                        }));
+    }
+
+    private void serveOrderToOtherPersons(String authorisation,
+                                          DynamicMultiSelectList otherParties,
+                                          CaseData caseData,
+                                          List<Document> orderDocuments,
+                                          List<Element<BulkPrintOrderDetail>> bulkPrintOrderDetails) {
+        otherParties.getValue()
+                .stream()
+                .map(DynamicMultiselectListElement::getCode)
+                .forEach(id -> {
+                    log.info("sending order docs for {}", id);
+                    PartyDetails otherPerson = getOtherPerson(id, caseData);
+                    if (isNotEmpty(otherPerson) && isNotEmpty(otherPerson.getAddress())) {
+                        try {
+                            UUID bulkPrintId = sendOrderDocumentViaPost(caseData, otherPerson, authorisation, orderDocuments);
+                            if (null != bulkPrintId) {
+                                //PRL-4225 save bulk print details
+                                bulkPrintOrderDetails.add(element(
+                                        buildBulkPrintOrderDetail(bulkPrintId, id,
+                                                otherPerson.getLabelForDynamicList()))
+                                );
+                            }
+                        } catch (Exception e) {
+                            log.error("Error in sending order docs to other person {}", id);
+                            log.error("Exception occurred in sending order docs to other person", e);
+                        }
+                    } else {
+                        log.info("Couldn't send server order details to other person, address is null/empty for {}", id);
+                    }
+                });
+    }
+
+    private BulkPrintOrderDetail buildBulkPrintOrderDetail(UUID bulkPrintId,
+                                                           String id,
+                                                           String name) {
+        return BulkPrintOrderDetail.builder()
+                .bulkPrintId(bulkPrintId.toString())
+                .partyId(id)
+                .partyName(name)
+                .servedDateTime(LocalDateTime.now().format(
+                        DateTimeFormatter.ofPattern(DATE_TIME_PATTERN, Locale.UK)))
+                .build();
     }
 
     private String getCafcassEmail(ManageOrders manageOrders) {
@@ -459,118 +527,130 @@ public class ManageOrderEmailService {
         return cafcassEmail;
     }
 
-    private String getOtherPeopleEmailAddress(String id, CaseData caseData) {
-        String other = null;
+    private PartyDetails getOtherPerson(String id, CaseData caseData) {
         List<Element<PartyDetails>> otherPartiesToNotify = TASK_LIST_VERSION_V2.equalsIgnoreCase(caseData.getTaskListVersion())
-            ? caseData.getOtherPartyInTheCaseRevised()
-            : caseData.getOthersToNotify();
+                ? caseData.getOtherPartyInTheCaseRevised()
+                : caseData.getOthersToNotify();
         if (null != otherPartiesToNotify) {
             Optional<Element<PartyDetails>> otherPerson = otherPartiesToNotify.stream()
-                .filter(element -> element.getId().toString().equalsIgnoreCase(id)).findFirst();
-            if (otherPerson.isPresent() && YesOrNo.Yes.equals(otherPerson.get().getValue().getCanYouProvideEmailAddress())) {
-                other = otherPerson.get().getValue().getEmail();
+                    .filter(element -> element.getId().toString().equalsIgnoreCase(id))
+                    .findFirst();
+            if (otherPerson.isPresent() && null != otherPerson.get().getValue().getAddress()) {
+                return otherPerson.get().getValue();
             }
         }
-        return other;
+        return null;
     }
 
-    private void sendEmailToPartyOrSolicitor(List<DynamicMultiselectListElement> value,
+    private void sendEmailToApplicantOrSolicitor(List<DynamicMultiselectListElement> value,
                                              List<Element<PartyDetails>> partyDetails,
                                              SelectTypeOfOrderEnum isFinalOrder,
-                                             CaseDetails caseDetails, CaseData caseData, boolean isRespondent, String authorisation) {
-        Map<String, String> partyMap = new HashMap<>();
+                                             CaseData caseData) {
         value.forEach(element -> {
-            Map<String, String> partyMapTemp;
-            Optional<Element<PartyDetails>> partyData = partyDetails.stream()
+            Optional<Element<PartyDetails>> partyDataOptional = partyDetails.stream()
                 .filter(party -> party.getId().toString().equalsIgnoreCase(element.getCode())).findFirst();
-            if (partyData.isPresent()) {
-                partyMapTemp = getPartyMap(element.getCode(), partyData);
-                boolean isSolicitorEmail = isSolicitorEmailExists(partyData);
-                if (isSolicitorEmail) {
-                    sendEmailToPartyOrPartySolicitor(isFinalOrder, partyMapTemp.entrySet().iterator().next().getKey(),
+            if (partyDataOptional.isPresent()) {
+                PartyDetails partyData = partyDataOptional.get().getValue();
+                if (isSolicitorEmailExists(partyData)) {
+                    sendEmailToPartyOrPartySolicitor(isFinalOrder, partyData.getSolicitorEmail(),
                                                      buildApplicantRespondentSolicitorEmail(
-                                                         caseDetails,
-                                                         partyMapTemp.entrySet().iterator().next().getValue()
+                                                             caseData,
+                                                             partyData.getRepresentativeFullName()
                                                      ),
                                                      caseData
                     );
-                } else if (!isRespondent && isPartyProvidedWithEmail(partyData)) {
-                    sendEmailToPartyOrPartySolicitor(isFinalOrder, partyMapTemp.entrySet().iterator().next().getKey(),
+                } else if (isPartyProvidedWithEmail(partyData)) {
+                    sendEmailToPartyOrPartySolicitor(isFinalOrder, partyData.getEmail(),
                                                      buildApplicantRespondentEmail(
-                                                         caseDetails,
-                                                         partyMapTemp.entrySet().iterator().next().getValue()
+                                                             caseData,
+                                                             partyData.getLabelForDynamicList()
                                                      ),
                                                      caseData
                     );
-                } else if (isRespondent) {
-                    try {
-                        notifyCitizen(isFinalOrder, caseDetails, caseData, partyMapTemp, partyData, authorisation);
-                    } catch (Exception e) {
-                        log.info("Unable to notify respondent");
-                        throw new RuntimeException(e);
-                    }
                 }
-
             }
         });
     }
 
-    private void notifyCitizen(SelectTypeOfOrderEnum isFinalOrder, CaseDetails caseDetails, CaseData caseData, Map<String,
-        String> partyMapTemp, Optional<Element<PartyDetails>> partyData, String authorisation) throws Exception {
-        log.info("Inside notifyCitizen while serving order");
-        if (CaseUtils.isCitizenAccessEnabled(partyData.get().getValue())) {
-            log.info("Dashboard access already enabled");
-            if (ContactPreferences.digital.equals(partyData.get().getValue().getContactPreferences())
-                && isPartyProvidedWithEmail(partyData)) {
-                log.info("Contact preference set as email");
-                sendEmailToPartyOrPartySolicitor(
-                    isFinalOrder,
-                    partyMapTemp.entrySet().iterator().next().getKey(),
-                    buildApplicantRespondentEmail(
-                        caseDetails,
-                        partyMapTemp.entrySet().iterator().next().getValue()
-                    ),
-                    caseData
-                );
-            } else {
-                log.info("Contact preference set as post");
-                sendOrderDocumentViaPost(caseData, partyData.get().getValue(), authorisation);
+    private void sendEmailToSolicitorOrPostToRespondent(List<DynamicMultiselectListElement> value,
+                                             List<Element<PartyDetails>> partyDetails,
+                                             SelectTypeOfOrderEnum isFinalOrder,
+                                             CaseData caseData, String authorisation,
+                                             List<Document> orderDocuments,
+                                             List<Element<BulkPrintOrderDetail>> bulkPrintOrderDetails) {
+        value.forEach(element -> {
+            Optional<Element<PartyDetails>> partyDataOptional = partyDetails.stream()
+                    .filter(party -> party.getId().toString().equalsIgnoreCase(element.getCode())).findFirst();
+            if (partyDataOptional.isPresent()) {
+                PartyDetails partyData = partyDataOptional.get().getValue();
+                if (isSolicitorEmailExists(partyData)) {
+                    sendEmailToPartyOrPartySolicitor(isFinalOrder, partyData.getSolicitorEmail(),
+                            buildApplicantRespondentSolicitorEmail(
+                                    caseData,
+                                    partyData.getRepresentativeFullName()
+                            ),
+                            caseData
+                    );
+                } else if (ContactPreferences.digital.equals(partyData.getContactPreferences())
+                            && isPartyProvidedWithEmail(partyData)) {
+                    log.info("Contact preference set as email");
+                    sendEmailToPartyOrPartySolicitor(isFinalOrder, partyData.getEmail(),
+                            buildApplicantRespondentEmail(caseData,
+                                    partyData.getLabelForDynamicList()
+                            ),
+                            caseData
+                    );
+                } else {
+                    try {
+                        UUID bulkPrintId = sendOrderDocumentViaPost(caseData, partyData, authorisation, orderDocuments);
+                        if (null != bulkPrintId) {
+                            //PRL-4225 save bulk print details
+                            bulkPrintOrderDetails.add(element(
+                                    buildBulkPrintOrderDetail(bulkPrintId, element.getCode(),
+                                            partyData.getLabelForDynamicList()))
+                            );
+                        }
+                    } catch (Exception e) {
+                        log.error("Error in sending order docs to respondent {}", element.getCode());
+                        log.error("Exception occurred in sending order docs to respondent", e);
+                    }
+                }
             }
-        } else {
-            log.info("Dashboard access not enabled");
-            sendOrderDocumentViaPost(caseData, partyData.get().getValue(), authorisation);
-
-        }
+        });
     }
 
-    private void sendOrderDocumentViaPost(CaseData caseData, PartyDetails partyData, String authorisation) throws Exception {
-        List<Document> docs = new ArrayList<>();
-        docs.add(serviceOfApplicationPostService.getCoverLetter(
+    private UUID sendOrderDocumentViaPost(CaseData caseData,
+                                          PartyDetails partyData,
+                                          String authorisation,
+                                          List<Document> orderDocuments) throws Exception {
+        List<Document> documents = new ArrayList<>();
+        //generate cover letter
+        documents.add(serviceOfApplicationPostService.getCoverLetter(
             caseData,
             authorisation,
             partyData.getAddress(),
             partyData.getLabelForDynamicList()
         ));
-        docs = ListUtils.union(docs, getServedOrderDocumentsAndAdditionalDocuments(
-            caseData));
-        log.info("docs send to bulkPrintService => " + docs);
+
+        //cover should be the first doc in the list, append all order docs
+        documents.addAll(orderDocuments);
+        log.info("docs send to bulkPrintService => " + documents);
         log.info("case id => " + caseData.getId());
-        UUID bulkPrintId = bulkPrintService.send(
-            String.valueOf(caseData.getId()),
-            authorisation,
-            ORDER_TYPE,
-            docs
+
+        return bulkPrintService.send(
+                String.valueOf(caseData.getId()),
+                authorisation,
+                ORDER_TYPE,
+                documents
         );
-        log.info("ID in the queue from bulk print service : {}", bulkPrintId);
     }
 
     private static List<Document> getServedOrderDocumentsAndAdditionalDocuments(CaseData caseData) {
         List<Document> orderDocuments = new ArrayList<>();
-        List<Document> additionalDocuments = new ArrayList<>();
         log.info("selectedOrderIds ==> " + caseData.getManageOrders().getServeOrderDynamicList());
         if (null != caseData.getManageOrders() && null != caseData.getManageOrders().getServeOrderDynamicList()) {
             List<String> selectedOrderIds = caseData.getManageOrders().getServeOrderDynamicList().getValue()
-                .stream().map(DynamicMultiselectListElement::getCode).collect(Collectors.toList());
+                .stream().map(DynamicMultiselectListElement::getCode).toList();
             log.info("selectedOrderIds ==> " + selectedOrderIds);
             log.info("caseData.getOrderCollection() ==> " + caseData.getOrderCollection());
             caseData.getOrderCollection().stream()
@@ -582,39 +662,21 @@ public class ManageOrderEmailService {
                     if (isNotEmpty(order.getValue().getOrderDocumentWelsh())) {
                         orderDocuments.add(order.getValue().getOrderDocumentWelsh());
                     }
-                    if (CollectionUtils.isNotEmpty(order.getValue().getServeOrderDetails().getAdditionalDocuments())
-                        && CollectionUtils.isEmpty(additionalDocuments)) {
-                        order.getValue().getServeOrderDetails().getAdditionalDocuments().stream().forEach(
-                            additionalDocumentEl -> additionalDocuments.add(additionalDocumentEl.getValue()));
+                    if (CollectionUtils.isNotEmpty(order.getValue().getServeOrderDetails().getAdditionalDocuments())) {
+                        order.getValue().getServeOrderDetails().getAdditionalDocuments().forEach(
+                            additionalDocumentEl -> orderDocuments.add(additionalDocumentEl.getValue()));
                     }
                 });
-            if (CollectionUtils.isNotEmpty(additionalDocuments)) {
-                orderDocuments.addAll(additionalDocuments);
-            }
         }
         return orderDocuments;
     }
 
-    private Map<String, String> getPartyMap(String code, Optional<Element<PartyDetails>> party) {
-        Map<String, String> applicantMap = new HashMap<>();
-
-        if (isSolicitorEmailExists(party)) {
-            applicantMap.put(party.get().getValue().getSolicitorEmail(), party.get().getValue()
-                .getRepresentativeFirstName() + " "
-                + party.get().getValue().getRepresentativeLastName());
-        } else if (isPartyProvidedWithEmail(party)) {
-            applicantMap.put(party.get().getValue().getEmail(), party.get().getValue().getFirstName() + " "
-                + party.get().getValue().getLastName());
-        }
-
-        return applicantMap;
+    private boolean isPartyProvidedWithEmail(PartyDetails party) {
+        return YesOrNo.Yes.equals(party.getCanYouProvideEmailAddress());
     }
 
-    private boolean isPartyProvidedWithEmail(Optional<Element<PartyDetails>> party) {
-        return party.isPresent() && YesOrNo.Yes.equals(party.get().getValue().getCanYouProvideEmailAddress());
+    private boolean isSolicitorEmailExists(PartyDetails party) {
+        return StringUtils.isNotEmpty(party.getSolicitorEmail());
     }
 
-    private boolean isSolicitorEmailExists(Optional<Element<PartyDetails>> party) {
-        return party.isPresent() && StringUtils.isNotEmpty(party.get().getValue().getSolicitorEmail());
-    }
 }
